# wup

./: .gitignore  Cargo.toml  README.md  config.yml  flake.nix
.github/workflows/: build.yml
src/: cli.rs  constants.rs  download.rs  main.rs
src/models/: config.rs  github.rs
