[package]
name = "win-up"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.8", features = ["color", "derive"] }
color-eyre = "0.6.2"
figment = { version = "0.10.10", features = ["yaml"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
