[package]
name = "wup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
color-eyre = "0.6.2"
futures-util = "0.3"
figment = { version = "0.10.10", features = ["yaml"] }
indicatif = "0.17.5"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
zip = "0.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"